# FBX2glTF

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FindFBX.cmake  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  build.sh  conanfile.py  docker-compose.yaml
.github/actions/build-win-10/: action.yml
.github/workflows/: build-release.yml  build-test.yml  build-ubuntu.yml  build-win-10.yml  build.yaml  build.yml
demo/: icon.png.import  project.godot
demo/addons/fbx/: import_fbx.gd  plugin.cfg  plugin.gd
models/: Pinecone.glb  SphereWithTangents.glb  apple.glb  roughness.glb  shininess_example.glb
npm/: PATENTS  README.md  index.js  package.json
npm/fbx2gltf/: LICENSE  README.md  index.js  package-lock.json  package.json
npm/tests/: README.md  package.json  tsconfig.json
npm/tests/models/fromFacebook/Jon/: jon_morph.fbx  troll-final.fbx
npm/tests/models/fromFacebook/Natalie/: GlitchRobot.fbx
npm/tests/models/fromFacebook/Ocean/: zell_van_vertex_color.fbx
npm/tests/models/fromFacebook/RAZ/: RAZ_ape.fbx
npm/tests/models/fromGltfSamples/BoxVertexColors/: BoxVertexColors.fbx
npm/tests/models/fromGltfSamples/WaterBottle/: NewWaterBottle.fbx  README.md
npm/tests/test/: fbx2gltf.ts  mocha.opts
sdk/Darwin/2019.2/: License.rtf
sdk/Darwin/2019.2/samples/: README.txt
sdk/Darwin/2019.2/samples/Animation/: main.cxx
sdk/Darwin/2019.2/samples/Audio/: CMakeLists.txt
sdk/Darwin/2019.2/samples/Camera/: CMakeLists.txt  main.cxx
sdk/Darwin/2019.2/samples/ConvertScene/: box.fbx  main.cxx
sdk/Darwin/2019.2/samples/ExportScene01/: CMakeLists.txt  Thumbnail.h  main.cxx
sdk/Darwin/2019.2/samples/ExportScene02/: main.cxx
sdk/Darwin/2019.2/samples/ExportScene03/: CMakeLists.txt  MyKFbxMesh.cxx  MyKFbxMesh.h  main.cxx
sdk/Darwin/2019.2/samples/ExportScene04/: CMakeLists.txt  gobo.tif
sdk/Darwin/2019.2/samples/ExportScene05/: CMakeLists.txt  main.cxx
sdk/Darwin/2019.2/samples/ExportShader/: Default_reflection.dds  main.cxx
sdk/Darwin/2019.2/samples/Instances/: CMakeLists.txt  main.cxx
sdk/Darwin/2019.2/samples/ProceduralTexture/: CMakeLists.txt
sdk/Darwin/2019.2/samples/UVSample/: CMakeLists.txt
sdk/Darwin/2019.2/samples/ViewScene/: CMakeLists.txt  DrawScene.cxx  DrawText.cxx  DrawText.h  FBX_ASCII_TEXTURE  GetPosition.h  GlFunctions.cxx  GlFunctions.h  SceneContext.cxx  SetCamera.cxx  SetCamera.h  targa.cxx  targa.h
sdk/Linux/2019.2/: FBX_SDK_Online_Documentation.html  FBX_SDK_Online_Documentation.html.zst  License.txt  License.txt.zst
sdk/Linux/2019.2/include/: fbxsdk.h.zst
sdk/Linux/2019.2/samples/: CMakeSettings.txt  CMakeSettings.txt.zst  README.txt  README.txt.zst
sdk/Linux/2019.2/samples/ExportScene02/: CMakeLists.txt  CMakeLists.txt.zst  main.cxx  main.cxx.zst  scene02.jpg.zst
sdk/Linux/2019.2/samples/ImportScene/: CMakeLists.txt  CMakeLists.txt.zst  DisplayAnimation.cxx  DisplayAnimation.cxx.zst  DisplayAnimation.h  DisplayAnimation.h.zst  DisplayCache.cxx  DisplayCache.cxx.zst  DisplayCache.h  DisplayCache.h.zst  DisplayCamera.cxx  DisplayCamera.cxx.zst  DisplayCamera.h.zst  DisplayCommon.cxx.zst  DisplayCommon.h.zst  DisplayGenericInfo.cxx.zst  DisplayGenericInfo.h.zst  DisplayGlobalSettings.cxx  DisplayGlobalSettings.cxx.zst  DisplayGlobalSettings.h.zst  DisplayHierarchy.cxx.zst  DisplayHierarchy.h  DisplayHierarchy.h.zst  DisplayLight.cxx  DisplayLight.cxx.zst  DisplayLight.h  DisplayLight.h.zst  DisplayLink.cxx.zst  DisplayLink.h.zst  DisplayLodGroup.cxx  DisplayLodGroup.cxx.zst  DisplayLodGroup.h  DisplayLodGroup.h.zst  DisplayMarker.cxx.zst  DisplayMarker.h  DisplayMarker.h.zst  DisplayMaterial.cxx.zst  DisplayMaterial.h  DisplayMaterial.h.zst  DisplayMesh.cxx  (+31 more)
sdk/Windows/2019.2/: License.rtf  readme.txt
sdk/Windows/2019.2/include/: fbxsdk.h
sdk/Windows/2019.2/samples/: CMakeSettings.txt
sdk/Windows/2019.2/samples/UI Examples/ImportExport/: CMakeLists.txt  UI.cxx  UI.rc  stdafx.h
sdk/Windows/2019.2/samples/UI Examples/SceneTreeView/: CMakeLists.txt  SDK_Utility.cxx  SDK_Utility.h  UI.cxx  UI.rc  resource.h
src/: FBX2glTF.cpp  FBX2glTF.h  Fbx2Raw.cpp  Fbx2Raw.h  Raw2Gltf.cpp  Raw2Gltf.h  RawModel.cpp  RawModel.h  main.cpp  mathfu.h  mathfu.hpp
src/fbx/: Fbx2Raw.cpp  Fbx2Raw.hpp  FbxBlendShapesAccess.cpp  FbxBlendShapesAccess.hpp  FbxLayerElementAccess.hpp  FbxMaterialInfo.hpp  FbxMaterialsAccess.cpp  FbxMaterialsAccess.hpp  FbxRoughMetMaterialInfo.cpp  FbxRoughMetMaterialInfo.hpp  FbxSkinningAccess.cpp  FbxSkinningAccess.hpp  FbxTraditionalMaterialInfo.cpp  FbxTraditionalMaterialInfo.hpp
src/fbx/materials/: 3dsMaxPhysicalMaterial.cpp  ArnoldStandardMaterial.cpp  FbxMaterials.cpp  FbxMaterials.hpp  RoughnessMetallicMaterials.hpp  StingrayPBSMaterial.cpp  TraditionalMaterials.cpp  TraditionalMaterials.hpp
src/glTF/: AccessorData.cpp  AccessorData.h  AnimationData.cpp  AnimationData.h  BufferData.cpp  BufferData.h  BufferViewData.cpp  BufferViewData.h  CameraData.cpp  CameraData.h  ImageData.cpp  ImageData.h  MaterialData.cpp  MaterialData.h  MeshData.cpp  MeshData.h  NodeData.cpp  NodeData.h  PrimitiveData.cpp  PrimitiveData.h  SamplerData.h  SceneData.cpp  SceneData.h  SkinData.cpp  SkinData.h  TextureData.cpp  TextureData.h
src/gltf/: GltfModel.cpp  GltfModel.hpp  Raw2Gltf.cpp  Raw2Gltf.hpp  TextureBuilder.cpp  TextureBuilder.hpp
src/gltf/properties/: AccessorData.cpp  AccessorData.hpp  AnimationData.cpp  AnimationData.hpp  BufferData.cpp  BufferData.hpp  BufferViewData.cpp  BufferViewData.hpp  CameraData.cpp  CameraData.hpp  ImageData.cpp  ImageData.hpp  LightData.cpp  LightData.hpp  MaterialData.cpp  MaterialData.hpp  MeshData.cpp  MeshData.hpp  NodeData.cpp  NodeData.hpp  PrimitiveData.cpp  PrimitiveData.hpp  SamplerData.hpp  SceneData.cpp  SceneData.hpp  SkinData.cpp  SkinData.hpp  TextureData.cpp  TextureData.hpp
src/raw/: RawModel.cpp  RawModel.hpp
src/utils/: File_Utils.cpp  File_Utils.h  File_Utils.hpp  Image_Utils.cpp  Image_Utils.h  Image_Utils.hpp  String_Utils.cpp  String_Utils.h  String_Utils.hpp
(+790 files in other folders)
